fix logo overflow on nav

--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -29,8 +29,6 @@
 
 #navbar-brand-rewired {
   position: static;
-  width: 202px;
-  height: 46px;
   left: 0px;
   top: 24px;
 
